[tool.poetry]
name = "discord-utils"
version = "0.1.0"
description = ""
authors = ["Zachary Juang <zachary822@me.com>"]
readme = "README.md"
packages = [{include = "discord_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
rich = "^12.6.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
boto3 = "^1.24.89"
typer = {extras = ["all"], version = "^0.6.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_codes = true
plugins = ["pydantic.mypy"]

[tool.isort]
profile = "black"
case_sensitive = false
line_length = 120
filter_files = true

[tool.black]
line_length = 120
